--- a/example1.html
+++ b/example1.html
@@ -2,56 +2,59 @@
 <html lang="en">
 <head>
 	<title>Raphael examples</title>
+
 	<script src="raphael.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>	
+	<!--<script src="waterfall.js"></script>-->
 
 </head>
 <body>
-	<div id="notepad"></div>
+
 	<script>
 
 	//array that contians the data values
-	var dataValue = [];
-	dataValue[0]= "100";
-	dataValue[1]= "50";
-	dataValue[2]= "(150)"; //negative numbers are stored with parenthesis
-	dataValue[3]= "100";
-	dataValue[4]= "500";
+	var values = [];
+	values[0]= "50";
+	values[1]= "85";
+	values[2]= "95"; //negative numbers are stored with parenthesis
+	values[3]= "100";
+	values[4]= "110";
 
-	
+	var paperWidth = 400;
+	var paperHeight = 400;
+
+	function determinePaperDim(){
+		paperWidth = values.length * 100 + 200;
+	}
+
+	determinePaperDim();
 
 	var heightValue = []; //contains the difference in height between this bar and the previous bar
 
-	for(var j =0,jj=dataValue.length; j<jj; j++){
+	for(var j =0,jj=values.length; j<jj; j++){
 		if(j==0){
-			heightValue[j]=parseFloat(dataValue[j]);
+			heightValue[j]= parseFloat(values[j]);
 		}else{
-			if(dataValue[j].search(/\(/) !== -1){ //if we have a negative number
-				dataValue[j] = dataValue[j].replace(/\(|\)/g,"");
-				dataValue[j] = parseFloat(dataValue[j]);
-				dataValue[j] = (-1)*dataValue[j];
+			if(values[j].search(/\(/) !== -1){ //if we have a negative number
+				values[j] = values[j].replace(/\(|\)/g,"");
+				values[j] = parseFloat(values[j]);
+				values[j] = (-1)*values[j];
 			}else{
-				dataValue[j] = parseFloat(dataValue[j]);
+				values[j] = parseFloat(values[j]);
 			}
-			heightValue[j] = dataValue[j]-dataValue[j-1];	
+			heightValue[j] = values[j]-values[j-1];	
 		}
 		
 	}
 
-	console.log("typeof "+typeof(heightValue));
-
-	var paperHeight = 600;
-
-
-	var paper = Raphael(50, 50, 800, paperHeight);
-	// Canvas is created at the top left corner of the #notepad element
-	// (or its top right corner in dir="rtl" elements)
+	var paper = Raphael(50, 50, paperWidth+50, paperHeight+50); //we add 50 to both height and width to give it a bit of gap
 
 	// Same as above
 	var startFromX = 30;
-	var startFromY = 400;
-	var width = 100;
+	var startFromY = paperHeight/2;
+	var bwidth = 50;
 	var x = 40;
-	var y = 0;
+	var y = 0; 
 	var height = 0;
 	var startFromBottom = false;
 
@@ -59,75 +62,91 @@
 
 	function makeBar(x,y,w,h,color){
 		c = paper.rect(x,y,w,h).attr({
-			stroke: color,
+			//stroke: color,
 			fill: "210-"+color+"-#333"
 		});
 	}
 
 	function makeGrid(){
-		c = paper.path("M30 10 L30 800 M30 410 L800 410");
-		for(var i=10,ii=1000; i<ii; i+=50){
-			c = paper.path("M25 "+i+" L40 "+i+"");
-			//c = paper.text(15, i, i);
+		var correctXaxis = paperWidth + 10;
+		var correctYaxis = (paperHeight/2) + 10;
+		c = paper.path('M30 10 L30 '+(paperHeight+10)+''); //horizontal grid line
+		c = paper.path("M30 "+correctYaxis+" L"+paperWidth+" "+correctYaxis); //vertical grid line
+
+		for(var i=10,ii=paperWidth; i<=ii; i+=50){
+			c = paper.path("M25 "+i+" L40 "+i+"").attr({
+				stroke:'#333'
+			});
 		}
 
-		for(var j=40,jj=1000; j<jj; j+=50){
-			c = paper.path("M"+j+" 390 L"+j+" 410");
+		//text labels for the grid
+		for (var z=0,zz=paperHeight; z<=zz; z+=50){
+			if(x!==0){
+				c = paper.text(15, (paperHeight/2)-z+10, z);	
+			}
+			
 		}
+
+		for (var x=0,xx=paperHeight; x<=xx; x+=50){
+			if(x!==0){
+				c = paper.text(12, (paperHeight/2)+x+10, "- "+x);	
+			}
+			
+		}
+
 	}
 
 	function sumTotBar(){
-		console.log("im in sumTotBar");
 		var acum = 0;
 		for(var i=0,ii=heightValue.length; i<ii; i++){
 			acum +=heightValue[i];
 		}
-		console.log("acum "+acum);
-
 		y = startFromY - acum;
-
-		console.log("y "+y);
+	
 		color = '#0000ff';
 		if(acum == 0){
 			acum = 1;
 		}else if(acum<0){
 			acum = (-1)*acum;
 		}
-		makeBar(x,y+10,width,acum,color);
+		makeBar(x,y+10,bwidth,acum,color);
 		
 	}
 
-	makeGrid();
 
-	for(var i=0,ii=dataValue.length; i<ii; i++){
+	for(var i=0,ii=values.length; i<ii; i++){
 
 		if(i==0){//the first bar is different from the rest because it has nothing to compare to
-			y = startFromY - dataValue[i];
-			height = dataValue[i];
+			y = startFromY - values[i];
+			height = values[i];
 			color = '#00ff00';
+			x = 50;
 		}else{
 			if(heightValue[i]<0){
-				y = startFromY - dataValue[i-1];
+				y = startFromY - values[i-1];
 				height = heightValue[i] *(-1);
 				color = '#ff0000';
 			}else{
-				y = startFromY - dataValue[i];
+				y = startFromY - values[i];
 				height = heightValue[i];
 				color = '#00ff00';
 			}
 			
 		}
 
-		makeBar(x,y+10,width,height,color);
+		makeBar(x,y+10,bwidth,height,color);
 
-		x+=110;	
+		x+=100;	
 		
 	}	
 
-	sumTotBar();
 
-
+	$(document).ready(function(){	
+		sumTotBar();	
+		makeGrid();
+	});
 
 	</script>
+
 </body>
 </html>
